# devpills

./: README.md  pyproject.toml
generator/: settings.py
posts/php/: form_info.php  pdoconnect.php  sample.sqlite3
