[project]
name = "devpills"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "click>=8.3.1",
    "fastapi>=0.128.0",
    "flask>=3.1.2",
    "httpx>=0.28.1",
    "matplotlib>=3.10.8",
    "parsel>=1.11.0",
    "pillow>=12.1.0",
    "pygments>=2.19.2",
    "requests>=2.32.5",
    "starlette[full]>=0.50.0",
    "typer[all]>=0.21.1",
    "uvicorn>=0.40.0",
]
